@@ -23,6 +23,8 @@ dillo-2.1
 +- Allowed compilation with older machines by removing a few C99isms.
  - Added use of inttypes.h when stdint.h isn't found.
    Patches: Dan Fandrich
++- Made the DNS resolver report in numeric address notation.
+   Patch: Justus Winter
 +- Reduced warnings with gcc-4.3.
    Patch: Thomas Orgis
 +- Added the "middle_click_drags_page" dillorc option.
